OO-3118: add "Assessment mode" right in the groups rights management of courses